# TACO

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  about.toml
.config/: about.hbs  nextest.toml
.github/workflows/: release.yml  static.yml  test.yml
artifact-evaluation/: AE-Dockerfile  ByMC-Dockerfile  ae-serve-docs.sh  apache.conf  artifact-evaluation.md  bench-bymc.sh  bundle-ae.sh  table2.ods
benchmarks/: README.md
benchmarks/ByMC/concur14/: asyn-byzagreement0.ta  asyn-ray97-nbac-clean.ta  asyn-ray97-nbac.ta  bcast-byz.ta  bcast-folklore-crash.ta  cond-consensus2.ta
benchmarks/ByMC/popl17-fmsd17/: asyn-byzagreement0.ta  asyn-guer01-nbac.ta  asyn-ray97-nbac-clean.ta  bcast-byz.ta  c1cs.ta  cond-consensus2.ta  consensus-folklore-onestep.ta
benchmarks/ByMC/random19/: ben-or.ta  n-ben-or-byz.ta  n-ben-or-nonclean.ta  n-ben-or.ta  n-kset.ta  n-rabc-cr.ta  n-rabc-s.ta  n-rabc.ta  n-rs-bosco.ta  p-ben-or-byz.ta  p-ben-or-nonclean.ta  p-ben-or.ta  p-kset.ta  p-rabc-cr.ta  p-rabc-s.ta  p-rabc.ta  p-rs-bosco.ta
benchmarks/TACO/concur14/: asyn-byzagreement0.ta  bcast-folklore-crash.ta  cond-consensus2.ta  toy.ta
benchmarks/TACO/lmcs20/: tendermint-1round-safety.ta
benchmarks/TACO/popl17-fmsd17/: asyn-guer01-nbac.ta  asyn-ray97-nbac-clean.ta  bcast-byz.ta  c1cs.ta  cond-consensus2.ta
benchmarks/TACO/random19/: n-ben-or-byz.ta  n-ben-or-nonclean.ta  n-ben-or.ta  n-kset.ta  n-rabc-cr.ta  n-rabc-s.ta  n-rabc.ta  n-rs-bosco.ta  p-ben-or-nonclean.ta  (+5 more)
benchmarks/red-belly/: rb-bc.ta  rb-simple.ta  rb.ta
benchmarks/reset-benchmarks/: SRB.eta  phase-king-buggy.eta  phase-king.eta  rb-2x_reset.eta  rb-RelBrd_V1.eta  rb-floodMin_V0.eta  rb-floodMin_V1.eta  rb-reset_V0.eta  rb-reset_V1.eta  rb-simple-2x_reset_V0.eta  rb-simple-2x_reset_V1.eta  rb-simple-reset_V0.eta  rb-simple-reset_V1.eta
crates/taco-acs-model-checker/: Cargo.toml  README.md
crates/taco-acs-model-checker/src/: acs_threshold_automaton.rs  error_graph.rs  lib.rs  partial_ord.rs
crates/taco-acs-model-checker/src/acs_threshold_automaton/: configuration.rs  index_ctx.rs
crates/taco-acs-model-checker/src/acs_threshold_automaton/configuration/: partially_ordered_cfg_map.rs
crates/taco-acs-model-checker/src/error_graph/: edge.rs  node.rs  spurious_path_checker.rs
crates/taco-acs-model-checker/tests/: test_error_graph_only.rs  test_mc_full_eta.rs  test_mc_full_ta.rs
crates/taco-bdd/: Cargo.toml  README.md
crates/taco-bdd/src/: cudd.rs  lib.rs  oxidd.rs
crates/taco-bdd/tests/: dump_test.rs
crates/taco-cli/: Cargo.toml  README.md
crates/taco-cli/src/: cli.rs  main.rs  taco_config.rs
crates/taco-cli/src/cli/: output_formats.rs
crates/taco-cli/tests/: test_cli.rs
crates/taco-cli/tests/resources/: config.yaml  log_config.yaml  simple.ta  simple_reset.eta
crates/taco-display-utils/: Cargo.toml  README.md
crates/taco-display-utils/src/: lib.rs
crates/taco-interval-ta/: Cargo.toml  LICENSE  README.md
crates/taco-interval-ta/src/: builder.rs  interval.rs  lib.rs
crates/taco-interval-ta/src/builder/: static_interval_order.rs
crates/taco-interval-ta/src/builder/static_interval_order/: simple_order_generator.rs
crates/taco-interval-ta/tests/: test_abstract_for_benchmarks.rs
crates/taco-model-checker/: Cargo.toml  README.md
crates/taco-model-checker/src/: eltl.rs  lib.rs  preprocessing.rs  reachability_specification.rs
crates/taco-model-checker/src/eltl/: remove_negations.rs
crates/taco-model-checker/tests/: test_extract_spec_on_benchmark.rs  test_preprocessors_on_benchmark.rs
crates/taco-parser/: Cargo.toml  README.md
crates/taco-parser/src/: bymc.rs  bymc_format.pest  lib.rs  tla.rs  tla_format.pest
crates/taco-parser/src/tla/: integer_exprs.rs
crates/taco-parser/tests/: test_bymc_parser.rs  test_tla_parser.rs
crates/taco-smt-encoder/: Cargo.toml  README.md
crates/taco-smt-encoder/src/: expression_encoding.rs  lib.rs
crates/taco-smt-encoder/src/expression_encoding/: config_ctx.rs  ctx_mgr.rs  step_ctx.rs  ta_encoding.rs
crates/taco-smt-encoder/tests/: test_smt_interaction.rs
crates/taco-smt-model-checker/: Cargo.toml  README.md
crates/taco-smt-model-checker/src/: lib.rs  smt_encoding.rs
crates/taco-smt-model-checker/tests/: test_smt_model_checker.rs
crates/taco-threshold-automaton/: Cargo.toml  README.md
crates/taco-threshold-automaton/src/: dot.rs  expressions.rs  general_threshold_automaton.rs  lia_threshold_automaton.rs  lib.rs  path.rs
crates/taco-threshold-automaton/src/expressions/: fraction.rs  properties.rs
crates/taco-threshold-automaton/src/general_threshold_automaton/: builder.rs
crates/taco-threshold-automaton/src/lia_threshold_automaton/: general_to_lia.rs  integer_thresholds.rs  no_sum_var_ta.rs  properties.rs
crates/taco-threshold-automaton/src/lia_threshold_automaton/general_to_lia/: classify_into_lia.rs  remove_boolean_neg.rs  remove_div.rs  remove_minus.rs  split_pair.rs
crates/taco-threshold-automaton/tests/: test_dot_encoding.rs  test_lia_for_benchmarks.rs
crates/taco-zcs-model-checker/: Cargo.toml  README.md
crates/taco-zcs-model-checker/src/: lib.rs  paths.rs  smt_encoder_steady.rs  zcs.rs  zcs_error_graph.rs
crates/taco-zcs-model-checker/src/zcs/: bdd_var_manager.rs  builder.rs
crates/taco-zcs-model-checker/src/zcs_error_graph/: builder.rs
crates/taco-zcs-model-checker/tests/: test_mc_full_eta.rs  test_mc_full_ta.rs
docs/: README.md  about.md  dev-docs.md  landing-page.tex  myst.yml  preamble.tex  references.bib  theoretical-background.tex  usage-cli.md
docs/about/: third-party-licenses.html
docs/resources/: style.css  ta-highlighter.mjs  tla-highlighter.mjs
docs/theoretical-background/: algorithms.tex  motivating_example.tex  specs.tex
docs/usage-cli/: advanced-configuration.md  bymc-specification.md  commands.md  install.md  tla-specification.md
examples/: README.md
examples/tla/: SRB.tla  aba.tla  bcrb.tla  bosco.tla  c1cs.tla  cc.tla  cf1s.tla  frb.tla  nbacg.tla  nbacr.tla  strb.tla
scripts/: bench-taco.sh  coverage-report.sh  generate-dev-docs.sh
(+80 files in other folders)
