[workspace]
members = ["crates/*"]
resolver = "2"


[workspace.package]
license = "Apache 2.0"
homepage = "https://taco-mc.dev"
repository = "https://github.com/cispa/TACO"
authors = [ 
    "Paul Eichler <paul.eichler@cispa.de>", 
    "Tom Baumeister <tom.baumeister@cispa.de>", 
    "Peter Gastauer",
    ]
keywords = ["threshold-automaton", "model-checker", "verification" ]


[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
