[package]
name = "taco-bdd"
version = "0.1.0"
edition = "2024"
description = "A Binary Decision Diagram (BDD) crate that provides a unified interface for the CUDD and OxiDD BDD libraries. This crate is part of the TACO toolsuite."
license-file = "./LICENSE"
readme = "./README.md"
homepage.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories = ["science"]


[dependencies]
oxidd = { version = "0.11.0", features = ["bdd", "bcdd", "dot-export", "multi-threading", "manager-index"], optional = true }
oxidd-dump = { version = "0.6.0", features = ["dot"], optional = true }
cudd-sys = {version = "1.1.1", optional = true }
libc-stdhandle = { version = "0.1.0", optional = true }
libc = { version = "0.2.177", optional = true }
serde = { version = "1.0.228", optional = true, features = ["derive"] }


[features]
default = ["oxidd"]
oxidd = ["dep:oxidd"]
cudd = ["dep:cudd-sys", "dep:libc-stdhandle"]
visualize = ["dep:oxidd-dump", "dep:libc"]
config_deserialize = ["dep:serde"]


[lints.rust]
missing_docs = "warn"

[lints.clippy]
cognitive_complexity = "warn"

[lints.rustdoc]
broken_intra_doc_links = "deny"
missing_crate_level_docs = "deny"
unescaped_backticks = "warn"
private_doc_tests = "warn"
