[package]
name = "taco-interval-ta"
version = "0.1.0"
edition = "2024"
description = "A crate allowing you to obtain a threshold automaton with an (symbolic) interval abstraction applied to it. This crate is part of the TACO toolsuite."
license-file = "./LICENSE"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories = ["science"]

[dependencies]
taco-threshold-automaton = { version = "0.1.0", path = "../taco-threshold-automaton"}
taco-model-checker = {version = "0.1.0",  path = "../taco-model-checker" }
taco-display-utils = { version = "0.1.0", path = "../taco-display-utils" }
taco-smt-encoder = { version = "0.1.0", path = "../taco-smt-encoder" }
log = "0.4.28"

[dev-dependencies]
taco-parser = { version = "0.1.0", path = "../taco-parser" }
walkdir = "2.5.0"
lazy_static = "1.5.0"


[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[lints.clippy]
cognitive_complexity = "warn"

[lints.rustdoc]
broken_intra_doc_links = "deny"
missing_crate_level_docs = "deny"
unescaped_backticks = "warn"
private_doc_tests = "warn"
