[package]
name = "taco-smt-encoder"
version = "0.1.0"
edition = "2024"
description = "A crate defining the SMT encodings of threshold automata components into SMT. This crate is part of the TACO toolsuite."
license-file = "./LICENSE"
readme = "./README.md"
homepage.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories = ["science"]


[dependencies]
taco-threshold-automaton = { version = "0.1.0", path = "../taco-threshold-automaton" }
taco-display-utils = { version = "0.1.0", path = "../taco-display-utils" }
log = "0.4.28"
easy-smt = "0.3.2"
serde = { version = "1.0.228", optional = true, features = ["derive"] }


[features]
config_deserialize = ["dep:serde"]

[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[lints.clippy]
cognitive_complexity = "warn"

[lints.rustdoc]
broken_intra_doc_links = "deny"
missing_crate_level_docs = "deny"
unescaped_backticks = "warn"
private_doc_tests = "warn"
