[package]
name = "taco-zcs-model-checker"
version = "0.1.0"
edition = "2024"
description = "Model Checker constructing an abstract counter system encoded into BDDs to verify threshold automata. This model checker is part of the TACO toolsuite."
license-file = "./LICENSE"
readme = "./README.md"
homepage.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories = ["science"]


[dependencies]
taco-model-checker  = { version = "0.1.0", path = "../taco-model-checker" }
taco-bdd = { version = "0.1.0", path = "../taco-bdd" }
taco-smt-encoder = { version = "0.1.0", path = "../taco-smt-encoder" }
taco-threshold-automaton = { version = "0.1.0", path = "../taco-threshold-automaton" }
taco-interval-ta = { version = "0.1.0", path = "../taco-interval-ta" }
taco-display-utils = { version = "0.1.0", path = "../taco-display-utils" }
log = "0.4.28"
easy-smt = "0.3.2"

[dev-dependencies]
taco-parser = { version = "0.1.0", path = "../taco-parser" }

[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[lints.clippy]
cognitive_complexity = "warn"

[lints.rustdoc]
broken_intra_doc_links = "deny"
missing_crate_level_docs = "deny"
unescaped_backticks = "warn"
private_doc_tests = "warn"

[features]
default = ["cudd", "dot"]
oxidd = ["taco-bdd/oxidd"]
cudd = ["taco-bdd/cudd"]
dot = ["taco-threshold-automaton/dot"]
